--- a/environment.yml
+++ b/environment.yml
@@ -76,16 +76,16 @@ dependencies:
 - libffi=3.2.1=3
 - libgcc=7.2.0=h69d50b8_2
 - libgcc-ng=9.3.0=h5dbcf3e_17
-- libgfortran-ng=7.5.0=hae1eefd_17
-- libgfortran4=7.5.0=hae1eefd_17
-- libgfortran5=9.3.0=he4bcb1c_17
+- libgfortran-ng=7.5.0
+- libgfortran4=7.5.0
+- libgfortran5=9.3.0
 - libglib=2.66.2=hbe7bbb4_0
 - libiconv=1.16=h516909a_0
 - liblapack=3.8.0=17_openblas
 - liblapacke=3.8.0=17_openblas
 - libllvm10=10.0.1=he513fc3_3
 - libnghttp2=1.41.0=h8cfc5f6_2
-- libopenblas=0.3.10=pthreads_hb3c22a3_5
+- libopenblas=0.3.10
 - libpng=1.6.37=hed695b0_2
 - libpq=12.3=h5513abc_2
 - libsodium=1.0.10=0
@@ -151,14 +151,13 @@ dependencies:
 - pytz=2017.2=py36_0
 - pywavelets=1.1.1=py36h68bb277_3
 - pyyaml=3.12=py36_1
-- pyzmq=16.0.2=py36_2
 - qt=5.12.9=h1f2b2cb_0
 - readline=8.0=he28a2e2_2
 - requests=2.18.1=py36_0
 - ruamel_yaml=0.11.14=py36_0
 - scikit-image=0.15.0=py36hb3f55d8_2
 - scikit-learn=0.23.2=py36hb6e6923_2
-- scipy=1.5.3=py36h9e8f40b_0
+- scipy=1.5.3
 - seaborn=0.7.1=py36_0
 - setuptools=33.1.1=py36_0
 - simplegeneric=0.8.1=py36_0
@@ -193,7 +192,6 @@ dependencies:
 - zlib=1.2.11=0
 - zstd=1.4.5=h6597ccf_2
 - libgfortran=3.0.0=1
-- nomkl=1.0=0
 - pip:
   - ipython-genutils==0.2.0
   - jupyter-client==5.1.0
